Fix two critical bugs: enhanced Tryst annotations and distraction stacks from Ramble
## Bug 1: Enhanced Tryst Annotations Not Working

**Problem**: AnimationController bypassed executeTrystEffect(), so annotation logic never ran.
The animation path called revealTileWithEquipmentEffects() directly instead of going
through executeTrystEffect() which contains the enhanced annotation logic.

**Solution**:
- Added isEnhanced and target fields to trystAnimation state type
- Store isEnhanced and target when starting Tryst animation
- After all reveals complete, apply enhanced annotations in AnimationController
- Import addOwnerSubsetAnnotation and add manhattanDistance helper
- Add comprehensive [TRYST] debug logging to animation path
- Test mode now calls executeTrystEffect directly to include annotations

**Files Changed**:
- src/types.ts: Added isEnhanced and target to trystAnimation type
- src/game/animation/AnimationController.ts:
  - Imported addOwnerSubsetAnnotation, added manhattanDistance helper
  - Store isEnhanced and target in animation state
  - Apply annotations after all reveals complete
  - Test mode calls executeTrystEffect directly

## Bug 2: Distraction Stacks from Ramble Not Affecting Rival Clues

**Problem**: distractionStackCount was only updated in startTurn() which runs at the
START of the player's turn. But rival clues are generated in AIController at the END
of the player's turn, BEFORE startTurn() is called. So Ramble stacks added during
the turn weren't reflected in distractionStackCount when rival clues were generated.

Equipment stacks worked because they were set at turn 1 start and persisted.

**Solution**:
- Update distractionStackCount from active status effects in processRivalTurn()
- This happens BEFORE rival clues are generated
- Add [RIVAL-TURN] debug logging to show when count is updated
- Use updated state consistently throughout rival turn processing

**Files Changed**:
- src/game/ai/AIController.ts:
  - Read distraction count from 

--- a/levels-config.json
+++ b/levels-config.json
@@ -425,6 +425,11 @@
           "type": "extraDirty",
           "count": 4,
           "placement": "random"
+        },
+        {
+          "type": "goblin",
+          "count": 1,
+          "placement": "nonmine"
         }
       ],
       "specialBehaviors": {
@@ -470,6 +475,11 @@
           "type": "extraDirty",
           "count": 6,
           "placement": "random"
+        },
+        {
+          "type": "goblin",
+          "count": 1,
+          "placement": "nonmine"
         }
       ],
       "specialBehaviors": {
@@ -511,7 +521,7 @@
         },
         {
           "type": "goblin",
-          "count": 2,
+          "count": 3,
           "placement": "nonmine"
         }
       ],
@@ -522,15 +532,15 @@
       }
     },
     {
-      "levelNumber": 13,
-      "levelId": "L13",
+      "levelNumber": 14,
+      "levelId": "L14",
       "uponFinish": {
         "cardReward": true,
         "equipmentReward": false,
         "upgradeReward": true,
         "shopReward": false,
         "winTheGame": false,
-        "nextLevel": ["L14"]
+        "nextLevel": ["L15"]
       },
       "description": "Introducing: goblin lair",
       "dimensions": {
@@ -614,15 +624,15 @@
       }
     },
     {
-      "levelNumber": 14,
-      "levelId": "L14",
+      "levelNumber": 13,
+      "levelId": "L13",
       "uponFinish": {
         "cardReward": true,
-        "equipmentReward": true,
-        "upgradeReward": false,
+        "equipmentReward": false,
+        "upgradeReward": true,
         "shopReward": false,
         "winTheGame": false,
-        "nextLevel": ["L15"]
+        "nextLevel": ["L14"]
       },
       "description": "Strategic Lair Removal",
       "dimensions": {
@@ -655,7 +665,7 @@
         },
         {
           "type": "goblin",
-          "count": 2,
+          "count": 3,
           "placement": "nonmine"
         },
         {
@@ -714,6 +724,11 @@
           "type": "lair",
           "count": 5,
           "placement": [[2,1],[7,1],[1,2],[8,2],[1,7],[8,7],[2,8],[7,8]]
+        },
+        {
+          "type": "surfaceMine",
+          "count": 1,
+          "placement": {"owner": ["player", "neutral"]}
         }
       ],
       "specialBehaviors": {
@@ -756,6 +771,11 @@
           "type": "lair",
           "count": 2,
           "placement": "empty"
+        },
+        {
+          "type": "surfaceMine",
+          "count": 1,
+          "placement": {"owner": ["player", "neutral"]}
         }
       ],
       "specialBehaviors": {
@@ -800,7 +820,7 @@
         },
         {
           "type": "surfaceMine",
-          "count": 3,
+          "count": 4,
           "placement": {"owner": ["player", "neutral"]}
         }
       ],
@@ -846,7 +866,7 @@
         },
         {
           "type": "surfaceMine",
-          "count": 3,
+          "count": 4,
           "placement": {"owner": ["player", "neutral"]}
         }
       ],
@@ -861,7 +881,7 @@
       "levelNumber": 20,
       "levelId": "L20",
       "uponFinish": {
-        "cardReward": false,
+        "cardReward": true,
         "equipmentReward": false,
         "upgradeReward": false,
         "shopReward": true,
